terraform/infra-as-code/sg.tf
resource "aws_security_group" "web_server_sg" {
  name_prefix = "web-server-sg"
  vpc_id = aws_vpc.my_vpc_lab.id
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

   }

  egress {
      from_port   = 0
      to_port     = 0
      protocol    = -1
      cidr_blocks = ["0.0.0.0/0"]
  }
}
